Trying to fix Dark mode

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,18 @@
+/*#282c34 */
+
 .App {
   text-align: center;
 }
 
 .appWrapper {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .cardWrapper{
@@ -23,4 +25,37 @@
 .playerCard{
   display:grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.dark-mode__toggle {
+  background: green;
+  border-radius: 50px;
+  border: 1px solid white;
+  height: 20px;
+  position: relative;
+  width: 40px;
+}
+
+.toggle {
+  background: #f68819;
+  border-radius: 50px;
+  height: 18px;
+  left: 0;
+  position: absolute;
+  transition: 0.2s;
+  width: 20px;
+}
+
+.toggled {
+  left: 18px;
+}
+
+.dark-mode {
+  color: #fff;
+  background-color: #313843;
+}
+
+.dark-mode .display {
+  background-color: #1F2022;
+  border: none;
 }
